Fixed dragon name align

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -312,8 +312,8 @@ a#userShow {
 
     h4 {
       position: relative;
-      top: 220px;
-      left: 100%;
+      top: 225px;
+      left: 70px;
     }
 
     .dragon-part {
